# freeFFT

./: README.md  fast_fourier_transform.py  main.py  requirements.txt  resources.qrc  resources_rc.py  setup.cfg  setup.py  statusbar_Vline.py  ui_about.py  ui_about.ui  ui_about_win.py  ui_main.py  ui_main.ui
freefft/: __main__.py  fast_fourier_transform.py  themes.py  ui_about.py
rsc/: resources.qrc
src/freefft/: __main__.py  fast_fourier_transform.py  ui_about_win.py  ui_main.py
src/py/: freefft.py  resources_rc.py  ui_about.py  ui_main.py
src/ui/: ui_main.ui
