[metadata]
name = freefft
version = 0.0.3
author = Frank Pereny
author_email = fjpereny@gmail.com
description = FFT spectrum analyzer and condition monitoring software.
license = GNU General Public License v3 (GPLv3)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.frankpereny.com/freefft/
project_urls =
    Git Repository = https://github.com/fjpereny/freeFFT
    Bug Tracker = https://github.com/fjpereny/freeFFT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src/freefft
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src/freefft